5. Create constraints automatically

--- a/constraint-layout-start/app/src/main/res/layout/activity_main_autoconnect.xml
+++ b/constraint-layout-start/app/src/main/res/layout/activity_main_autoconnect.xml
@@ -7,12 +7,26 @@
     app:layout_editor_absoluteY="81dp">
 
     <ImageView
-        android:src="@drawable/singapore"
-        android:layout_width="184dp"
-        android:layout_height="203dp"
-        app:layout_editor_absoluteX="100dp"
-        app:layout_editor_absoluteY="68dp"
         android:id="@+id/imageView"
+        android:layout_width="60dp"
+        android:layout_height="357dp"
+        android:contentDescription="@string/placeholder"
         android:scaleType="centerCrop"
-        android:contentDescription="@string/placeholder" />
+        android:src="@drawable/singapore"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_editor_absoluteX="100dp"
+        app:layout_editor_absoluteY="68dp" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
