--- a/constraint-layout-start/app/src/main/res/layout/activity_main_barriers.xml
+++ b/constraint-layout-start/app/src/main/res/layout/activity_main_barriers.xml
@@ -10,6 +10,43 @@
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="80dp">
 
+    <EditText
+        android:id="@+id/settings"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="@string/camera_settings"
+        app:layout_constraintEnd_toEndOf="@+id/cameraType"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/cameraType"
+        app:layout_constraintTop_toBottomOf="@+id/cameraType"
+        app:layout_editor_absoluteX="73dp"
+        app:layout_editor_absoluteY="225dp"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="0" />
+
+    <EditText
+        android:id="@+id/cameraType"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="@string/camera_value"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/barrier"
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        app:layout_editor_absoluteX="73dp"
+        app:layout_editor_absoluteY="176dp"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="0" />
+
     <ImageView
         android:id="@+id/header"
         android:layout_width="0dp"
@@ -41,8 +78,8 @@
         android:id="@+id/favorite"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/info_background"
         android:contentDescription="@string/placeholder"
         android:padding="5dp"
@@ -61,6 +98,22 @@
         tools:layout_constraintTop_creator="0"
         tools:layout_editor_absoluteX="359dp"
         tools:layout_editor_absoluteY="104dp" />
+
+    <TextView
+        android:id="@+id/cameraLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:labelFor="@+id/cameraType"
+        android:text="@string/camera"
+        app:layout_constraintBaseline_creator="1"
+        app:layout_constraintBaseline_toBaselineOf="@+id/cameraType"
+        app:layout_constraintLeft_creator="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_editor_absoluteX="16dp"
+        app:layout_editor_absoluteY="189dp"
+        tools:layout_constraintBaseline_creator="0"
+        tools:layout_constraintLeft_creator="0" />
 
     <TextView
         android:id="@+id/title"
@@ -99,57 +152,12 @@
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="238dp" />
 
-    <TextView
-        android:id="@+id/cameraLabel"
+    <android.support.constraint.Barrier
+        android:id="@+id/barrier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:labelFor="@+id/cameraType"
-        android:text="@string/camera"
-        app:layout_constraintBaseline_creator="1"
-        app:layout_constraintBaseline_toBaselineOf="@+id/cameraType"
-        app:layout_constraintLeft_creator="1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_editor_absoluteX="16dp"
-        app:layout_editor_absoluteY="189dp"
-        tools:layout_constraintBaseline_creator="0"
-        tools:layout_constraintLeft_creator="0" />
-
-    <EditText
-        android:id="@+id/settings"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="@string/camera_settings"
-        app:layout_constraintEnd_toEndOf="@+id/cameraType"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/cameraType"
-        app:layout_constraintTop_toBottomOf="@+id/cameraType"
-        app:layout_editor_absoluteX="73dp"
-        app:layout_editor_absoluteY="225dp"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="0" />
-
-    <EditText
-        android:id="@+id/cameraType"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="@string/camera_value"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/cameraLabel"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        app:layout_editor_absoluteX="73dp"
-        app:layout_editor_absoluteY="176dp"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="0" />
+        app:barrierDirection="end"
+        app:constraint_referenced_ids="cameraLabel,settingsLabel"
+        tools:layout_editor_absoluteX="411dp" />
 
 </android.support.constraint.ConstraintLayout>
